--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "frontend",
+  "name": "descargador-de-youtube",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "main": "electron/main.cjs",
   "scripts": {
-    "dev": "concurrently \"npm run vite\" \"wait-on http://localhost:5173 && npm run electron\"",
-    "vite": "vite",
-    "build": "vite build",
-    "build:react": "vite build",
-    "build:electron": "electron-builder",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "electron": "electron electron/main.cjs",
-    "dev:all": "concurrently \"vite\" \"npm run electron\""
+  "dev": "concurrently -k -n VITE,ELECTRON,BACKEND -c yellow,cyan,green \"vite\" \"wait-on http://localhost:5173 && electron electron/main.cjs\" \"pnpm run backend\"",
+  "vite": "vite",
+  "build": "npm run build:react && npm run build:electron",
+  "build:react": "vite build",
+  "build:electron": "electron-builder",
+  "backend": "cmd /c \"set PYTHONPATH=backend && ..\\.venv\\Scripts\\python.exe backend\\app\\main.py\"",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "electron": "electron electron/main.cjs"
   },
   "dependencies": {
     "@fluentui/react-icons": "^2.0.298",
@@ -48,17 +48,28 @@
     "wait-on": "^8.0.3"
   },
   "build": {
-    "appId": "com.tutor.software",
-    "productName": "Descargador de Youtube",
-    "files": [
-      "dist/**/*",
-      "electron/**/*"
-    ],
+    "appId": "com.descargador.videos",
+    "productName": "DescargadorDeYoutube",
     "directories": {
-      "buildResources": "assets"
+      "output": "dist"
     },
+    "files": [
+      "dist",              
+      "electron",         
+      "backend",           
+      "node_modules",
+      "package.json"
+    ],
     "win": {
-      "target": "nsis"
-    }
+      "target": "nsis",
+      "icon": "public/icon.png"
+    },
+    "extraResources": [
+      {
+        "from": "../.venv", 
+        "to": ".venv"
+      }
+    ]
   }
 }
+
