Listo para exportar - ejecutar backend por separado

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,7 +62,14 @@
     ],
     "win": {
       "target": "nsis",
-      "icon": "public/icon.png"
+      "icon": "public/descarga.ico"
+    },
+    "nsis": {
+      "oneClick": false,
+      "perMachine": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "Descargador de Youtube"
     },
     "extraResources": [
       {
